src/Sass/App.scss
.App {
  color: gray;
  background: #222222;
  min-height: 100vh;
  //   width: 100vw;
  //   display: flex;
  //   flex-direction: column;
  //   align-items: center;
  //   justify-content: center;
  //   font-size: x-large;
}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: #00406f;
  color: white;
  height: 50px;
  padding: 0 10px;
  //   width: 100vw;
  &__item {
    // color: gray;
    font-size: 24px;
  }
}

.navbar-2 {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 1000px;
  height: 32px;
  //   overflow-x: hidden;
  scroll-snap-type: mandatory;
  background-image: linear-gradient(90deg, #005b9e, #0082c6);
  //   display: block;
  &__item {
    color: #ced4da;
    text-transform: uppercase;
    scroll-snap-align: start;
    // text-align: center;
  }
}

